2001-09-11  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in: 1000 little fixed bugs.

2001-09-10  Arturo Espinosa Aldama  <arturo@ximian.com>

	* file.pl.in (xst_file_rmtree): replicated File::Path::rmtree,
	because it has a bug that prevents it from removing directories.
	Any suggestions for an alternative?
	(xst_file_backup_rotate_dirs): use replacement.

	* debug.pl.in (xst_debug_rotate_try): same.

2001-09-05  Tambet Ingo  <tambet@ximian.com>

	* time-conf.in: Use perl functions to copy, move and delete.

	* file.pl.in: ditto.

	* debug.pl.in (xst_debug_rotate_try): ditto.

	* x.pl.in: s/TODO (reporting)/Implement $1/g;

	* report.pl.in (xst_report): Implement.
	(xst_report): use dynamical report message table.

	* display-conf.in (distro_file): Determine config file from X version.

	* x.pl.in: Line based to token based parser. Rewrite.

2001-08-30  Arturo Espinosa Aldama  <arturo@ximian.com>

	* internetsharing-conf.in (get_interfaces): new directive.

	* ishare.pl.in (xst_ishare_get_linux22_forward_support):
	Changed masquerading support to check for /proc/net/ip_masquerade.

2001-08-28  Arturo Espinosa Aldama  <arturo@ximian.com>

	* ishare.pl.in (xst_ishare_fwrules_get_ipchains): typo
	- $$hash{"kerneltool"} -> $hash{"kerneltool"}.
	Do set the "active" key, even if it's not configured.

Wed Aug 22 22:16:03 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* *{pl,-conf}.in: Oops, forgot about the .in suffix of files
	that haven't been processed. Put the prefix if the backend is
	the .in version.

	* *.pl.in: Ah, change had to go here too.

	* *-conf.in: Check for ___scriptsdir___ value. If it is
	___scriptsdir__, then require files on the pwd. This way we
	can call backend-conf.in directly, and without make installing.

2001-08-23  Hans Petter Jansson  <hpj@ximian.com>

	* report.pl.in: Add report messages for filesys mount/unmount.
	Fix a random typo I noticed.

	* filesys.pl.in (xst_filesys_mount_on): Add error reporting.