@@ -1,3 +1,9 @@
+2001-09-12  Hans Petter Jansson  <hpj@ximian.com>
+
+	* filesys.pl.in (xst_filesys_mount_off): Fix format of unmount messages.
+
+	* report.pl.in: Ditto.
+	
 2001-09-11  Tambet Ingo  <tambet@ximian.com>
 
 	* x.pl.in: 1000 little fixed bugs.
